Refactored many small places to remove some "Major" smells in the code (see Sonar site on ISCI for more information).